# moonlink

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.aarch64  Dockerfile.amd64  LICENSE  README.md  deny.toml  rust-toolchain.toml
.devcontainer/: Dockerfile  (+3 more)
src/moonlink/: Cargo.toml
src/moonlink/benches/: bench_write.rs  benchmark.md  microbench_index_stress.rs  microbench_row_comparison.rs  microbench_write_mooncake_table.rs
src/moonlink/src/: error.rs  event_sync.rs  lib.rs  row.rs  storage.rs  table_handler.rs  table_notify.rs  union_read.rs
src/moonlink/src/observability/: iceberg_persistence.rs  mod.rs  snapshot_creation.rs
src/moonlink/src/row/: arrow_converter.rs  column_array_builder.rs  moonlink_row.rs  moonlink_type.rs  proto_converter.rs
src/moonlink/src/storage/: async_bitwriter.rs  column_array_builder.rs  compaction.rs  data_batches.rs  delete_vector.rs  deltalake.rs  disk_slice.rs  filesystem.rs  iceberg.rs  index.rs  io_utils.rs  mem_slice.rs  mooncake_table.rs  mooncake_table_config.rs  parquet_utils.rs  snapshot_options.rs  storage_utils.rs  table_utils.rs  wal.rs
src/moonlink/src/storage/cache/: metadata.rs  object_storage.rs
src/moonlink/src/storage/compaction/: compaction_config.rs  compactor.rs  table_compaction.rs  test_utils.rs  tests.rs
src/moonlink/src/storage/deltalake/: deltalake_table_loader.rs  deltalake_table_manager.rs  deltalake_table_syncer.rs  parquet_utils.rs  test.rs  utils.rs
src/moonlink/src/storage/filesystem/: accessor.rs  accessor_config.rs  filesystem_config.rs  gcs.rs  s3.rs  storage_config.rs  test_utils.rs
src/moonlink/src/storage/iceberg/: aws_security_config.rs  base_iceberg_schema_fetcher.rs  blob_proxy.rs  catalog_test_impl.rs  catalog_test_utils.rs  catalog_utils.rs  compaction_tests.rs  data_file_manifest_manager.rs  deletion_vector.rs  deletion_vector_manifest_manager.rs  file_catalog.rs  file_catalog_test.rs  file_catalog_test_utils.rs  file_index_manifest_manager.rs  gcs_test_utils.rs  glue_catalog.rs  glue_catalog_test.rs  glue_catalog_test_utils.rs  iceberg_glue_catalog_test.rs  iceberg_rest_catalog_test.rs  iceberg_schema_fetcher.rs  iceberg_schema_manager.rs  iceberg_snapshot.rs  iceberg_snapshot_fetcher.rs  iceberg_snapshot_state_manager.rs  iceberg_table_config.rs  iceberg_table_event_manager.rs  iceberg_table_loader.rs  iceberg_table_manager.rs  iceberg_table_syncer.rs  index.rs  io_utils.rs  manifest_utils.rs  mock_filesystem_test.rs  moonlink_catalog.rs  object_storage_catalog.rs  parquet_stats_utils.rs  parquet_utils.rs  puffin_utils.rs  puffin_writer_proxy.rs  (+19 more)
src/moonlink/src/storage/index/: cache_utils.rs  file_index_id.rs  hash_index.rs  index_merge_config.rs  mem_index.rs  persisted_bucket_hash_map.rs  test_in_memory_index.rs
src/moonlink/src/storage/mooncake_table/: batch_id_counter.rs  batch_ingestion.rs  benchmark.rs  column_array_builder.rs  data_batches.rs  data_file_state_tests.rs  delete_vector.rs  deletion_vector_puffin_state_tests.rs  disk_slice.rs  file_index_state_tests.rs  iceberg_persisted_records.rs  mem_slice.rs  persistence_buffer.rs  replay.rs  shared_array.rs  snapshot.rs  snapshot_cache_utils.rs  snapshot_maintenance.rs  snapshot_persistence.rs  snapshot_read.rs  snapshot_read_output.rs  snapshot_validation.rs  state_test_utils.rs  state_tests.rs  table_accessor_test_utils.rs  table_config.rs  table_creation_test_utils.rs  table_event_manager.rs  table_operation_test_utils.rs  table_secret.rs  table_snapshot.rs  table_state.rs  table_state_reader.rs  table_status.rs  table_status_reader.rs  test_utils.rs  test_utils_commons.rs  tests.rs  transaction_stream.rs  validation_test_utils.rs
src/moonlink/src/storage/table/: iceberg.rs
src/moonlink/src/table_handler/: chaos_replay.rs  chaos_table_metadata.rs  chaos_test.rs  failure_tests.rs  profile_test.rs  regression.rs  table_handler_state.rs  test_utils.rs  tests.rs
src/moonlink/src/union_read/: read_state.rs  read_state_manager.rs  table_metadata.rs
src/moonlink_backend/: Cargo.toml
src/moonlink_backend/src/: columnstore_table_id.rs  config_utils.rs  error.rs  file_utils.rs  lib.rs  logging.rs  mooncake_table_id.rs  parquet_utils.rs  recovery_utils.rs  table_config.rs  table_status.rs
src/moonlink_backend/tests/: common.rs  control_plane_retry.rs  test_backend.rs  test_initial_copy.rs  test_postgres_source.rs
src/moonlink_connectors/: Cargo.toml
src/moonlink_connectors/src/: error.rs  lib.rs  mooncake_table_id.rs  pg_replicate.rs  postgres.rs  replication_connection.rs  replication_manager.rs  replication_state.rs  rest_ingest.rs
src/moonlink_connectors/src/pg_replicate/: initial_copy.rs  initial_copy_writer.rs  moonlink_sink.rs  pipeline.rs  postgres_source.rs  replication_state.rs  source.rs  table.rs  table_init.rs  util.rs
src/moonlink_connectors/src/postgres/: sink.rs  util.rs
src/moonlink_connectors/src/rest_ingest/: datetime_utils.rs  decimal_utils.rs  event_request.rs  json_converter.rs  moonlink_rest_sink.rs  rest_event.rs  rest_source.rs  schema_util.rs
src/moonlink_metadata_store/: Cargo.toml
src/moonlink_metadata_store/src/: base_metadata_store.rs  config_utils.rs  error.rs  lib.rs  metadata_store_utils.rs  postgres.rs  test_utils.rs
src/moonlink_metadata_store/src/postgres/: config_utils.rs  pg_client_wrapper.rs  pg_metadata_store.rs  utils.rs
src/moonlink_metadata_store/src/sqlite/: sqlite_metadata_store.rs  tests.rs  utils.rs
src/moonlink_metadata_store/tests/: test_pg_metadata_store.rs  test_pg_metadata_store_utils.rs
src/moonlink_metadata_store/tests/common/: test_environment.rs  test_utils.rs
src/moonlink_rpc/: Cargo.toml
src/moonlink_rpc/src/: error.rs  lib.rs
src/moonlink_service/: Cargo.toml
src/moonlink_service/examples/: rest_api_demo.rs
src/moonlink_service/src/: error.rs  lib.rs  logging.rs  main.rs  otel.rs  otel_to_moonlink_pb.rs  rest_api.rs  rpc_server.rs  test.rs  test_utils.rs
src/moonlink_service/src/otel/: metrics_handler.rs  otel_schema.rs  otel_state.rs  otel_to_moonlink_pb.rs  service.rs  test.rs
(+133 files in other folders)
