[workspace]
members = [
    "src/moonlink",
    "src/moonlink_backend",
    "src/moonlink_connectors",
    "src/moonlink_metadata_store",
    "src/moonlink_rpc",
    "src/moonlink_service",
]
resolver = "2"

[workspace.package]
version = "0.0.1"
edition = "2021"
license = "LicenseRef-BSL-1.1"

[workspace.dependencies]
arrow = { version = "55", default-features = false, features = [
  "canonical_extension_types",
] }
arrow-array = "55"
arrow-ipc = "55"
arrow-schema = "55"
async-stream = "0.3.6"
async-trait = "0.1"
backon = { version = "1.5.1" }
bincode = { version = "2", features = ["serde"] }
bitstream-io = "4.5"
chrono = { version = "0.4", default-features = false }
clap = { version = "4", features = ["derive"] }
console-subscriber = "0.2"
crc32fast = "1"
fastbloom = "0.12.0"
futures = { version = "0.3", default-features = false }
hashbrown = "0.15.3"
iceberg = { git = "https://github.com/apache/iceberg-rust.git", rev = "b3ea8d1fca14ddc23154615862a62d3e3e56a769", default-features = false, features = [
  "storage-fs",
] }
itertools = { version = "0.14" }
lru = { version = "0.14.0" }
more-asserts = "0.3"
multimap = { version = "0.10", default-features = false }
nix = { version = "0.27", default-features = false, features = ["fs"] }
num-bigint = { version = "0.4" }
num-traits = "0.2"
opendal = { version = "0.54", default-features = false }
parquet = { version = "55", default-features = false, features = [
  "arrow",
  "async",
  "arrow_canonical_extension_types",
] }
paste = "1"
postgres-replication = { git = "https://github.com/Mooncake-labs/rust-postgres.git", rev = "e6bd7d5cacc4eb7a03930b5ca3db1ef9caf0a3d5" }
postgres-types = { git = "https://github.com/Mooncake-Labs/rust-postgres.git", rev = "e6bd7d5cacc4eb7a03930b5ca3db1ef9caf0a3d5", features = ["with-serde_json-1"] }
rand = "0.9"
roaring = "0.10"
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = "1"
serial_test = "3.0"
tempfile = "3"
thiserror = "2"
tokio = { version = "1.47", default-features = false, features = [
  "io-util",
  "macros",
  "rt-multi-thread",
  "signal",
  "sync",
  "time",
  "tracing",
] }
tokio-bitstream-io = "0.0.7"
tokio-postgres = { git = "https://github.com/Mooncake-labs/rust-postgres.git", rev = "e6bd7d5cacc4eb7a03930b5ca3db1ef9caf0a3d5", features = ["with-serde_json-1"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
typed-builder = "0.20"
url = "2.5"
uuid = { version = "1.17", default-features = false, features = ["v4"] }

[profile.release-with-debug]
inherits = "release"
debug = true

[patch.crates-io]
postgres-types = { git = "https://github.com/Mooncake-Labs/rust-postgres.git", rev = "e6bd7d5cacc4eb7a03930b5ca3db1ef9caf0a3d5" }
postgres-protocol = { git = "https://github.com/Mooncake-Labs/rust-postgres.git", rev = "e6bd7d5cacc4eb7a03930b5ca3db1ef9caf0a3d5" }
