[workspace]
members = [
    "src/moonlink",
    "src/moonlink_backend",
    "src/moonlink_connectors",
    "src/moonlink_datafusion",
    "src/moonlink_metadata_store",
    "src/moonlink_rpc",
    "src/moonlink_service",
]
resolver = "2"

[workspace.package]
version = "0.0.1"
edition = "2021"
license = "LicenseRef-BSL-1.1"

[workspace.dependencies]
anyhow = "1.0"
arrow = { version = "55", default-features = false, features = [
  "canonical_extension_types",
] }
arrow-array = "55"
arrow-ipc = "55"
arrow-schema = "55"
async-stream = "0.3"
async-trait = "0.1"
backon = { version = "1.5" }
bincode = { version = "2", features = ["serde"] }
bitstream-io = "4.5"
bytes = "1.0"
chrono = { version = "0.4", default-features = false }
clap = { version = "4", features = ["derive"] }
crc32fast = "1"
datafusion = "49"
datafusion-cli = "49"
fastbloom = "0.12"
futures = { version = "0.3", default-features = false }
hashbrown = "0.15"
iceberg = { git = "https://github.com/apache/iceberg-rust.git", rev = "7cde26a7d793905bbbe4d7264b215ca9dc7e9567", default-features = false, features = [
  "storage-fs",
] }
itertools = { version = "0.14" }
lru = { version = "0.14" }
more-asserts = "0.3"
multimap = { version = "0.10", default-features = false }
nix = { version = "0.30", default-features = false, features = ["fs"] }
num-bigint = { version = "0.4" }
num-traits = "0.2"
object_store = "0.12"
opendal = { version = "0.54", default-features = false }
parquet = { version = "55", default-features = false, features = [
  "arrow",
  "async",
  "arrow_canonical_extension_types",
] }
paste = "1"
postgres-replication = { git = "https://github.com/Mooncake-labs/rust-postgres.git", rev = "4fda9c1bece3b93359ca1eb2779458fc1c080eae" }
postgres-types = { git = "https://github.com/Mooncake-Labs/rust-postgres.git", rev = "4fda9c1bece3b93359ca1eb2779458fc1c080eae", features = [
  "with-serde_json-1",
] }
rand = "0.9"
regex = "1.11"
roaring = "0.11"
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = "1"
serial_test = "3.0"
smallvec = "1.15"
tempfile = "3"
thiserror = "2"
tokio = { version = "1.47", default-features = false, features = [
  "fs",
  "io-util",
  "macros",
  "net",
  "rt-multi-thread",
  "signal",
  "sync",
  "time",
  "tracing",
] }
tokio-bitstream-io = "0.0"
tokio-postgres = { git = "https://github.com/Mooncake-labs/rust-postgres.git", rev = "4fda9c1bece3b93359ca1eb2779458fc1c080eae", features = [
  "with-serde_json-1",
] }
tracing = "0.1"
typed-builder = "0.20"
url = "2.5"
uuid = { version = "1.18", default-features = false, features = ["v4"] }

[profile.release-with-debug]
inherits = "release"
debug = true

[patch.crates-io]
postgres-types = { git = "https://github.com/Mooncake-Labs/rust-postgres.git", rev = "4fda9c1bece3b93359ca1eb2779458fc1c080eae" }
postgres-protocol = { git = "https://github.com/Mooncake-Labs/rust-postgres.git", rev = "4fda9c1bece3b93359ca1eb2779458fc1c080eae" }
