[workspace]
members = [
    "src/moonlink",
    "src/moonlink_backend",
    "src/moonlink_connectors",
    "src/moonlink_datafusion",
    "src/moonlink_metadata_store",
    "src/moonlink_rpc",
    "src/moonlink_service",
    "src/moonlink_table_metadata",
]
resolver = "2"

[workspace.package]
version = "0.0.1"
edition = "2021"
license = "LicenseRef-BSL-1.1"

[workspace.dependencies]
anyhow = "1.0"
arrow = { version = "55", default-features = false, features = [
  "canonical_extension_types",
] }
arrow-array = "55"
arrow-ipc = "55"
arrow-schema = "55"
async-stream = "0.3"
async-trait = "0.1"
backon = { version = "1.5" }
bincode = { version = "2", features = ["serde"] }
bitstream-io = "4.5"
bytes = "1.0"
chrono = { version = "0.4", default-features = false }
clap = { version = "4", features = ["derive"] }
crc32fast = "1"
datafusion = "49"
datafusion-cli = "49"
fastbloom = "0.12"
futures = { version = "0.3", default-features = false }
hashbrown = "0.15"
iceberg = { git = "https://github.com/apache/iceberg-rust.git", rev = "3e6779ee09c7e54d7ae8101f8477f5d04486ecc3", default-features = false, features = [
  "storage-fs",
] }
iceberg-catalog-rest = { git = "https://github.com/apache/iceberg-rust.git", rev = "3e6779ee09c7e54d7ae8101f8477f5d04486ecc3" }
itertools = { version = "0.14" }
lru = { version = "0.14" }
moka = { version = "0.12", features = ["future"] }
more-asserts = "0.3"
multimap = { version = "0.10", default-features = false }
native-tls = "0.2"
nix = { version = "0.30", default-features = false, features = ["fs"] }
num-bigint = { version = "0.4" }
num-traits = "0.2"
object_store = "0.12"
opendal = { version = "0.54", default-features = false }
parquet = { version = "55", default-features = false, features = [
  "arrow",
  "async",
  "arrow_canonical_extension_types",
] }
paste = "1"
postgres-native-tls = { git = "https://github.com/Mooncake-labs/rust-postgres.git", rev = "a7398c75b5cfd62fc016306a71d83306ad4ddf35" }
postgres-replication = { git = "https://github.com/Mooncake-labs/rust-postgres.git", rev = "a7398c75b5cfd62fc016306a71d83306ad4ddf35" }
postgres-types = { git = "https://github.com/Mooncake-Labs/rust-postgres.git", rev = "a7398c75b5cfd62fc016306a71d83306ad4ddf35", features = [
  "with-serde_json-1",
] }
rand = "0.9"
regex = "1.11"
roaring = "0.11"
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = "1"
serial_test = "3.0"
smallvec = "1.15"
tempfile = "3"
thiserror = "2"
tokio = { version = "1.47", default-features = false, features = [
  "fs",
  "io-util",
  "macros",
  "net",
  "rt-multi-thread",
  "signal",
  "sync",
  "time",
  "tracing",
] }
tokio-bitstream-io = "0.0"
tokio-postgres = { git = "https://github.com/Mooncake-labs/rust-postgres.git", rev = "a7398c75b5cfd62fc016306a71d83306ad4ddf35", features = [
  "with-serde_json-1",
] }
tracing = "0.1"
typed-builder = "0.20"
url = "2.5"
uuid = { version = "1.18", default-features = false, features = ["v4"] }

[profile.release-with-debug]
inherits = "release"
debug = true

[patch.crates-io]
postgres-types = { git = "https://github.com/Mooncake-Labs/rust-postgres.git", rev = "a7398c75b5cfd62fc016306a71d83306ad4ddf35" }
postgres-protocol = { git = "https://github.com/Mooncake-Labs/rust-postgres.git", rev = "a7398c75b5cfd62fc016306a71d83306ad4ddf35" }
