[package]
name = "moonlink"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
ahash = "0.8.11"
arrow = { workspace = true }
arrow-array = { workspace = true }
arrow-schema = { workspace = true }
async-trait = { workspace = true }
aws-sdk-s3 = { version = "1.14", optional = true }
bincode = { workspace = true }
bitstream-io = { workspace = true }
crc32fast = { workspace = true }
futures = { workspace = true }
iceberg = { workspace = true }
memmap2 = "0.9"
multimap = { workspace = true }
opendal = { workspace = true }
parquet = { workspace = true }
randomizer = "0.1"
roaring = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-bitstream-io = { workspace = true }
tokio-retry2 = { version = "0.5", default-features = false, features = ["jitter"] }
typed-builder = "0.18"
url = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
criterion = "0.5.1"
mockall = "0.13"
pprof = { version = "0.14", features = ["flamegraph"] }
rand = "0.9.1"
rstest = "0.25.0"
rstest_reuse = "0.7.0"
tempfile = { workspace = true }

[[bench]]
name = "microbench_write_mooncake_table"
harness = false

[[bench]]
name = "microbench_index_stress"
harness = false
required-features = ["bench"]

[[bench]]
name = "microbench_row_comparison"
harness = false

[[bench]]
name = "bench_write"
harness = false
required-features = ["bench"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(profiling_enabled)'] }

[features]
default = ["storage-fs"]
storage-all = ["storage-fs", "storage-s3"]

storage-fs = ["opendal/services-fs", "iceberg/storage-fs"]
storage-s3 = ["opendal/services-s3", "iceberg/storage-s3", "aws-sdk-s3"]

bench = []
