[package]
name = "moonlink"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[features]
default = ["storage-fs"]
storage-all = ["storage-fs", "storage-s3", "storage-gcs"]
test-utils = []

storage-fs = ["opendal/services-fs", "iceberg/storage-fs"]
storage-s3 = [
    "opendal/services-s3",
    "iceberg/storage-s3",
    "base64",
    "hmac",
    "sha1",
    "reqwest",
]
storage-gcs = [
    "opendal/services-gcs",
    "iceberg/storage-gcs",
    "base64",
    "hmac",
    "sha1",
    "reqwest",
]

bench = []

[dependencies]
ahash = "0.8.11"
arrow = { workspace = true }
arrow-array = { workspace = true }
arrow-schema = { workspace = true }
async-trait = { workspace = true }
base64 = { version = "0.22", optional = true }
bincode = { workspace = true }
chrono = { workspace = true }
crc32fast = { workspace = true }
fastbloom = { workspace = true }
futures = { workspace = true }
hashbrown = { workspace = true }
hmac = { version = "0.12", optional = true }
iceberg = { workspace = true }
itertools = { workspace = true }
lru = { workspace = true }
memmap2 = "0.9"
more-asserts = { workspace = true }
multimap = { workspace = true }
num-bigint = { workspace = true }
num-traits = { workspace = true }
opendal = { workspace = true }
parquet = { workspace = true }
rand = { workspace = true }
reqwest = { version = "0.12", features = ["json"], optional = true } 
roaring = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha1 = { version = "0.10", optional = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-bitstream-io = { workspace = true }
tokio-retry2 = { version = "0.5", default-features = false, features = [
    "jitter",
] }
tracing = "0.1"
typed-builder = "0.20"
url = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
criterion = "0.5.1"
mockall = "0.13"
pprof = { version = "0.14", features = ["flamegraph", "criterion"] }
rand = "0.9.1"
rstest = "0.25.0"
rstest_reuse = "0.7.0"
tempfile = { workspace = true }

[[bench]]
name = "microbench_write_mooncake_table"
harness = false

[[bench]]
name = "microbench_index_stress"
harness = false
required-features = ["bench"]

[[bench]]
name = "microbench_row_comparison"
harness = false

[[bench]]
name = "bench_write"
harness = false
required-features = ["bench"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(profiling_enabled)'] }
