[package]
name = "moonlink_backend"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[features]
default = ["storage-fs"]

profiling = ["console-subscriber"]

storage-s3 = ["moonlink/storage-s3"]
storage-gcs = ["moonlink/storage-gcs"]
storage-fs = ["moonlink/storage-fs"]

[dependencies]
arrow-array = { workspace = true }
arrow-schema = { workspace = true }
console-subscriber = { version = "0.4", optional = true }
moonlink = { path = "../moonlink", features = ["test-utils"] }
moonlink_connectors = { path = "../moonlink_connectors" }
moonlink_metadata_store = { path = "../moonlink_metadata_store" }
more-asserts = { workspace = true }
nix = { workspace = true }
parquet = { workspace = true, features = ["arrow"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
iceberg = { workspace = true }
roaring = { workspace = true }
rstest = "0.26"
serial_test = { workspace = true }
tempfile = { workspace = true }
tokio-postgres = { workspace = true }
