[package]
name = "moonlink_backend"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[features]
default = ["storage-fs"]

profiling = ["console-subscriber"]
test-utils = ["moonlink/test-utils", "moonlink_metadata_store/test-utils"]
metadata-postgres = ["moonlink_metadata_store/metadata-postgres"]
test-tls = ["moonlink_connectors/test-tls", "moonlink_metadata_store/test-tls"]

storage-s3 = ["moonlink/storage-s3", "moonlink_metadata_store/storage-s3"]
storage-gcs = ["moonlink/storage-gcs", "moonlink_metadata_store/storage-gcs"]
storage-fs = ["moonlink/storage-fs", "moonlink_metadata_store/storage-fs"]
storage-all = ["storage-s3", "storage-gcs", "storage-fs"]

[dependencies]
arrow = { workspace = true }
arrow-array = { workspace = true }
arrow-schema = { workspace = true }
console-subscriber = { version = "0.4", optional = true }
moonlink = { path = "../moonlink", features = ["test-utils"] }
moonlink_connectors = { path = "../moonlink_connectors" }
moonlink_error = { path = "../moonlink_error" }
moonlink_metadata_store = { path = "../moonlink_metadata_store" }
moonlink_table_metadata = { path = "../moonlink_table_metadata" }
more-asserts = { workspace = true }
native-tls = { workspace = true }
nix = { workspace = true }
parquet = { workspace = true, features = ["arrow"] }
postgres-native-tls = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
iceberg = { workspace = true }
roaring = { workspace = true }
rstest = "0.26"
serial_test = { workspace = true }
tempfile = { workspace = true }
thrift = "0.17"
tokio-postgres = { workspace = true }
