[package]
name = "moonlink_connectors"
version.workspace = true
edition.workspace = true

[dependencies]
moonlink = { path = "../moonlink" }
tokio-postgres.workspace = true
async-trait.workspace = true
arrow.workspace = true
chrono.workspace = true
num-traits.workspace = true
futures.workspace = true
thiserror.workspace = true
serde_json.workspace = true

postgres-replication.workspace = true
tokio.workspace = true
uuid.workspace = true
pg_escape = "0.1.1"
pin-project-lite = "0.2"
tracing = { version = "0.1", default-features = true }
bigdecimal = { version = "0.4.6", features = ["std"] }
bytes = "1.0"
byteorder = "1.5.0"
