[package]
name = "moonlink_connectors"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[dependencies]
arrow = { workspace = true }
arrow-schema = { workspace = true }
async-trait = { workspace = true }
bigdecimal = { version = "0.4.6", default-features = false, features = ["std"] }
byteorder = "1.5.0"
bytes = "1.0"
chrono = { workspace = true }
futures = { workspace = true }
moonlink = { path = "../moonlink" }
num-traits = { workspace = true }
pg_escape = "0.1.1"
pin-project-lite = "0.2"
postgres-replication = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-postgres = { workspace = true }
tracing = { version = "0.1", default-features = true }
uuid = { workspace = true }

[dev-dependencies]
iceberg = { workspace = true }
