[package]
name = "moonlink_connectors"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[features]
storage-s3 = ["moonlink/storage-s3"]
storage-gcs = ["moonlink/storage-gcs"]
storage-fs = ["moonlink/storage-fs"]
connector-pg = []

[dependencies]
arrow = { workspace = true }
arrow-array = { workspace = true }
arrow-schema = { workspace = true }
async-trait = { workspace = true }
bigdecimal = { version = "0.4", default-features = false, features = ["std"] }
byteorder = "1.5"
bytes = "1.0"
chrono = { workspace = true }
chrono-tz = "0.10"
futures = { workspace = true }
moonlink = { path = "../moonlink" }
moonlink_error = { path = "../moonlink_error" }
num-traits = { workspace = true }
parquet = { workspace = true }
pg_escape = "0.1"
pin-project-lite = "0.2"
postgres-replication = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-postgres = { workspace = true }
tracing = { version = "0.1", default-features = true }
uuid = { workspace = true }

[dev-dependencies]
iceberg = { workspace = true }
serial_test = { workspace = true }
tempfile = "3.0"
