[package]
name = "moonlink_metadata_store"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[features]
default = ["storage-fs"]
storage-all = ["storage-fs", "storage-s3", "storage-gcs"]
storage-fs = []
storage-gcs = []
storage-s3 = []

[dependencies]
async-trait = { workspace = true }
moonlink = { path = "../moonlink" }
more-asserts = { workspace = true }
postgres-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-postgres = { workspace = true }
url = { workspace = true }

[dev-dependencies]
serial_test = { workspace = true }
