[package]
name = "moonlink_service"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[features]
default = []
rest_api_demo = ["dep:reqwest"]

[dependencies]
arrow-ipc = { workspace = true }
arrow-schema = { workspace = true }
axum = "0.8"
clap = { workspace = true }
moonlink = { path = "../moonlink" }
moonlink_backend = { path = "../moonlink_backend" }
moonlink_metadata_store = { path = "../moonlink_metadata_store" }
moonlink_rpc = { path = "../moonlink_rpc" }
reqwest = { version = "0.12", features = ["json"], optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = { workspace = true }

[[example]]
name = "rest_api_demo"
required-features = ["rest_api_demo"]
