[package]
name = "moonlink_service"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[features]
default = ["storage-fs"]
rest_api_demo = ["dep:reqwest"]
standalone-test = []

storage-s3 = ["moonlink/storage-s3"]
storage-gcs = ["moonlink/storage-gcs"]
storage-fs = ["moonlink/storage-fs"]

[dependencies]
arrow-ipc = { workspace = true }
arrow-schema = { workspace = true }
axum = "0.8"
clap = { workspace = true }
moonlink = { path = "../moonlink" }
moonlink_backend = { path = "../moonlink_backend" }
moonlink_connectors = { path = "../moonlink_connectors" }
moonlink_error = { path = "../moonlink_error" }
moonlink_metadata_store = { path = "../moonlink_metadata_store" }
moonlink_proto = { path = "../moonlink_proto" }
moonlink_rpc = { path = "../moonlink_rpc" }
opentelemetry-proto = { version = "0.30", default-features = false, features = ["gen-tonic", "metrics"] }
prost = { workspace = true }
reqwest = { version = "0.12", features = ["json"], optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = { workspace = true }

[dev-dependencies]
arrow = { workspace = true }
arrow-array = { workspace = true }
arrow-buffer = "55"
async-recursion = "1"
bytes = "1"
more-asserts = { workspace = true }
parquet = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }
serial_test = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }

[[example]]
name = "rest_api_demo"
required-features = ["rest_api_demo"]
